// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox/> could one call onChange event before call change event on <input/> 1`] = `
<div
  className="CheckboxStyled-kzsMOt jKytSS"
>
  <div
    className="CheckboxElementStyled-dzeUmS kkKjA"
  >
    <input
      checked={false}
      className="CheckboxInputStyled-hCmkYE gPWRFM"
      disabled={false}
      id="checkbox-5"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      checked={false}
      className="CheckboxLabelStyled-jYtRsS hHhrsW"
      disabled={false}
      htmlFor="checkbox-5"
    >
      <div
        checked={false}
        className="CheckboxIconStyled-btfpTw emXegR"
        disabled={false}
        type="svg"
      >
        <svg
          color="currentColor"
          size="custom"
          viewBox="0 0 24 24"
        >
          <polygon
            points="9,19.4 3.3,13.7 4.7,12.3 9,16.6 19.8,5.8 21.2,7.2"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox/> renders correctly if prop checked set true 1`] = `
<div
  className="CheckboxStyled-kzsMOt jKytSS"
>
  <div
    className="CheckboxElementStyled-dzeUmS kkKjA"
  >
    <input
      checked={true}
      className="CheckboxInputStyled-hCmkYE gPWRFM"
      disabled={false}
      id="checkbox-1"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      checked={true}
      className="CheckboxLabelStyled-jYtRsS buFUCl"
      disabled={false}
      htmlFor="checkbox-1"
    >
      <div
        checked={true}
        className="CheckboxIconStyled-btfpTw dCKRCB"
        disabled={false}
        type="svg"
      >
        <svg
          color="currentColor"
          size="custom"
          viewBox="0 0 24 24"
        >
          <polygon
            points="9,19.4 3.3,13.7 4.7,12.3 9,16.6 19.8,5.8 21.2,7.2"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox/> renders correctly if prop defaultChecked set true 1`] = `
<div
  className="CheckboxStyled-kzsMOt jKytSS"
>
  <div
    className="CheckboxElementStyled-dzeUmS kkKjA"
  >
    <input
      checked={true}
      className="CheckboxInputStyled-hCmkYE gPWRFM"
      disabled={false}
      id="checkbox-2"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      checked={true}
      className="CheckboxLabelStyled-jYtRsS buFUCl"
      disabled={false}
      htmlFor="checkbox-2"
    >
      <div
        checked={true}
        className="CheckboxIconStyled-btfpTw dCKRCB"
        disabled={false}
        type="svg"
      >
        <svg
          color="currentColor"
          size="custom"
          viewBox="0 0 24 24"
        >
          <polygon
            points="9,19.4 3.3,13.7 4.7,12.3 9,16.6 19.8,5.8 21.2,7.2"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox/> renders correctly if prop disabled set true 1`] = `
<div
  className="CheckboxStyled-kzsMOt jKytSS"
>
  <div
    className="CheckboxElementStyled-dzeUmS kkKjA"
  >
    <input
      checked={false}
      className="CheckboxInputStyled-hCmkYE gPWRFM"
      disabled={true}
      id="checkbox-3"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      checked={false}
      className="CheckboxLabelStyled-jYtRsS cSxtin"
      disabled={true}
      htmlFor="checkbox-3"
    >
      <div
        checked={false}
        className="CheckboxIconStyled-btfpTw fKWktq"
        disabled={true}
        type="svg"
      >
        <svg
          color="currentColor"
          size="custom"
          viewBox="0 0 24 24"
        >
          <polygon
            points="9,19.4 3.3,13.7 4.7,12.3 9,16.6 19.8,5.8 21.2,7.2"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox/> renders correctly if prop label set test 1`] = `
<div
  className="CheckboxStyled-kzsMOt jKytSS"
>
  <div
    className="CheckboxElementStyled-dzeUmS jzQtWm"
  >
    <input
      checked={false}
      className="CheckboxInputStyled-hCmkYE gPWRFM"
      disabled={false}
      id="checkbox-4"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      checked={false}
      className="CheckboxLabelStyled-jYtRsS kXerKQ"
      disabled={false}
      htmlFor="checkbox-4"
    >
      <div
        checked={false}
        className="CheckboxIconStyled-btfpTw emXegR"
        disabled={false}
        type="svg"
      >
        <svg
          color="currentColor"
          size="custom"
          viewBox="0 0 24 24"
        >
          <polygon
            points="9,19.4 3.3,13.7 4.7,12.3 9,16.6 19.8,5.8 21.2,7.2"
          />
        </svg>
      </div>
      <span>
        <span
          className="LabelTextStyled-bIbjxo gblZEn"
        >
          test
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`<Checkbox/> renders correctly with default props 1`] = `
<div
  className="CheckboxStyled-kzsMOt jKytSS"
>
  <div
    className="CheckboxElementStyled-dzeUmS kkKjA"
  >
    <input
      checked={false}
      className="CheckboxInputStyled-hCmkYE gPWRFM"
      disabled={false}
      id="checkbox-0"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      checked={false}
      className="CheckboxLabelStyled-jYtRsS hHhrsW"
      disabled={false}
      htmlFor="checkbox-0"
    >
      <div
        checked={false}
        className="CheckboxIconStyled-btfpTw emXegR"
        disabled={false}
        type="svg"
      >
        <svg
          color="currentColor"
          size="custom"
          viewBox="0 0 24 24"
        >
          <polygon
            points="9,19.4 3.3,13.7 4.7,12.3 9,16.6 19.8,5.8 21.2,7.2"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;
